# egs_client

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  archive_Dockerfile.archive  compose.yaml  dev_copy_binary_to_release_folder.sh  io.github.egsclient.yml  justfile  org.flatpak.Hello.yml  release_install.sh  source_code_install.sh  source_code_uninstall.sh
.flatpak-builder/checksums/: x86_64-io.github.egsclient.yml
.todo/: tasks.json
Flutter_EGL/: README.md  pubspec.yaml
Flutter_EGL/lib/: main.dart
Flutter_EGL/lib/models/: fab.dart  unreal.dart
Flutter_EGL/lib/services/: api_service.dart  image_cache.dart
Flutter_EGL/lib/services/api/: api_service_create_project.dart  api_service_extras.dart  (+1 more)
Flutter_EGL/lib/theme/: app_colors.dart  app_theme.dart  theme_controller.dart
Flutter_EGL/lib/widgets/: fab_library_item.dart  library_tab_widget.dart  unreal_engine.dart
Flutter_EGL/linux/: CMakeLists.txt
Flutter_EGL/linux/runner/: my_application.cc
Flutter_EGL/web/: index.html
cache/: config.json  fab_list.json
cache/home/: .egs_client_tokens.json
docs/: IMAGE_CACHE.md  UNREAL_LINUX_DOWNLOADS.md
packaging/flatpak/: io.github.egsclient.desktop  io.github.egsclient.metainfo.xml
release/: egs_client.desktop
scripts/: dev_copy_binary_to_release_folder.sh  egs_client.desktop  release_install.sh  release_uninstall.sh  source_code_install.sh  source_code_uninstall.sh
src/: api.rs  main.rs
src/api/: fab.rs  mod.rs  ws.rs
src/models/: mod.rs
src/utils/: mod.rs
tests/: non_zero_download.rs
(+20 files in other folders)
